Add a TableViewController for library

--- a/bookshare/zh-Hans.lproj/Main.strings
+++ b/bookshare/zh-Hans.lproj/Main.strings
@@ -1,11 +1,8 @@
 /* Class = "UITabBarItem"; title = "Wall"; ObjectID = "52E-jA-Ne2"; */
 "52E-jA-Ne2.title" = "涂鸦墙";
 
-/* Class = "UITabBarItem"; title = "Library"; ObjectID = "Ngh-GE-BeQ"; */
-"Ngh-GE-BeQ.title" = "书库";
-
-/* Class = "UILabel"; text = "Hello world"; ObjectID = "fJr-y6-3BG"; */
-"fJr-y6-3BG.text" = "你好世界";
+/* Class = "UITabBarItem"; title = "Library"; ObjectID = "HN8-QV-Vmm"; */
+"HN8-QV-Vmm.title" = "图书馆";
 
 /* Class = "UITabBarItem"; title = "My"; ObjectID = "nFw-ag-kY2"; */
 "nFw-ag-kY2.title" = "我的";
